# transmilenio-project

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  guion.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 0.01-ae-initial-data-validation.ipynb  0.02-ae-data-validation.ipynb  1.01-ae-festivos-event-study.ipynb  1.02-ae-clima-panel-fe.ipynb  1.03-ae-ciclovia-did.ipynb  1.04-ae-campin-event-study.ipynb  1.05-ae-combustible-ts.ipynb  1.06-ae-ciudad-bolivar-synth-control.ipynb  2.01-ae-sintesis-causal.ipynb
tests/: test_dataset.py
transmilenio_project/: __init__.py  dataset.py  features.py  plots.py
transmilenio_project/dashboard/: .vercelignore  app.py  charts_causal.py  config.py  generar_kpis.py  requirements.txt
transmilenio_project/dashboard/.vercel/: project.json
transmilenio_project/dashboard/api/: index.py
transmilenio_project/dashboard/assets/: mapa_estaciones.html  style.css
transmilenio_project/dashboard/models/: predictor.py
transmilenio_project/dashboard/models/artefactos/: ciclovia_bogota.geojson  encoder.joblib  estacion_color.json  estacion_stats.json  kpis.json  linea_estaciones.json  metrics.joblib  random_forest.joblib  scaler.joblib  stations_ciclovia_tag.geojson  stations_clean.geojson  tabla_troncales.json
transmilenio_project/modeling/: predict.py  train.py
