[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "transmilenio_project"
version = "0.0.1"
description = "later"
authors = [
  { name = "Andr\u00e9s Escobar - Lis S\u00e1nchez" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["transmilenio_project"]
include = ["pyproject.toml", "transmilenio_project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["transmilenio_project"]
force-sort-within-sections = true

